# raven-framework

./: .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  config.json  pyproject.toml
components/: __init__.py  button.py  cards.py  container.py  expanding_icon.py  horizontal_container.py  icon.py  media_viewer.py  model_viewer.py  scroll_view.py  spacer.py  text_box.py  vertical_container.py  web_viewer.py
core/: __init__.py  raven_app.py  raven_simulator.py  raven_simulator_calibration.npz  run.sh  run_app.py
helpers/: __init__.py  animation_utils.py  async_runner.py  font_utils.py  logger.py  open_ai_helper.py  routine.py  themes.py  utils.py  utils_light.py
peripherals/: __init__.py  camera.py  click_button.py  eye_tracker.py  imu.py  microphone.py  sensor_utils.py  speaker.py
