[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raven_framework"
version = "1.0.0"
description = "A comprehensive UI framework for building Raven applications with PySide6"
readme = "README.md"
license = {text = "Proprietary - Copyright (c) 2026 Raven Resonance, Inc. All Rights Reserved."}
authors = [
    {name = "Raven Team", email = "hello@raven.computer"}
]
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "opencv-python",
    "requests",
    "openai",
    "Pillow",
    "qasync",
    "PyOpenGL",
    "numpy",
]

[project.optional-dependencies]
audio-simulator = [
    "simpleaudio==1.0.4",
]
recommended = [
    "PySide6>=6.6.0,<7.0.0",
    "opencv-python==4.12.0.88",
    "numpy>=2,<2.3.0",
    "requests>=2.31.0,<3.0.0",
    "openai==2.14.0",
    "Pillow==12.0.0",
    "qasync==0.28.0",
    "PyOpenGL==3.1.10",
]

[tool.setuptools]
packages = ["raven_framework"]
package-dir = {"raven_framework" = "."}

[tool.setuptools.package-data]
raven_framework = [
    "assets/**/*",
    "fonts/**/*",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
